Terraform/SecurityGroup_Module/main.tf
/*
This is a general Purpose Security Group
Take variables: Name, VPC_ID
Enable or Disable Inbound rules: HTTP, HTTPS, SSH
Allow for all outbound rules
*/



resource "aws_security_group" "SecGroup" {
  name        = var.sg_name
  description = "Security group with inbond SSH, HTTP, HTTPS"
  vpc_id      = var.vpc_id

  ingress {
    description = "Allow SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = var.sg_name
  }
}
